--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,12 @@
       "use": "@vercel/node"
     }
   ],
- 
-  "routes": 
-    { "src": "/", "dest": "/api/index.js" }
-    
-   { "src": "/(.*)", "dest": "/api/$1" }
-  
-
-
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/api"
+    }
+  ]
 }
+
+
