--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^8.22.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "serverless-http": "^4.0.0"
   }
 }
