--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
+  "start": "node api/index.js",
+  "dev": "nodemon api/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
