Backend ready for vercel deploy

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://USERNAME:PASSWORD@CLUSTER.mongodb.net/DATABASE_NAME
+MONGO_URI=mongodb+srv://ankit3jangir574_db_user:ENCODED_PASSWORD@cluster0.o91gfpa.mongodb.net/backendDB
