--- a/package.json
+++ b/package.json
@@ -1,32 +1,13 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "nodemon api/index.js"
-
-
-  
-
-
+    "start": "node api/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^4.22.1",
-    "mongodb": "^7.0.0",
-    "mongoose": "^8.22.0",
-    "morgan": "^1.10.1",
-    "serverless-http": "^4.0.0"
-
-}
-
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "serverless-http": "^3.2.0"
   }
-
+}
