--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://ankit3jangir574_db_user:PASSWORD@cluster0.o91gfpa.mongodb.net/backendDB
+MONGO_URI=mongodb+srv://ankit3jangir574_db_user:zsmFgYUejqvIDgVo@insta.jijnfq4.mongodb.net/?appName=insta
